--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -13,9 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# module name here\n",
+    "# Core\n",
     "\n",
-    "> API details."
+    "> This is the `core` module"
    ]
   },
   {
@@ -25,7 +25,8 @@
    "outputs": [],
    "source": [
     "#|hide\n",
-    "from nbprocess.showdoc import *"
+    "from nbprocess.showdoc import *\n",
+    "from fastcore.test import test_eq"
    ]
   },
   {
@@ -37,6 +38,58 @@
     "#|export\n",
     "def foo(): pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
+    "def add(x: int, # number 1 \n",
+    "        y: int, # number 1\n",
+    "        z: int, # number 2\n",
+    "       )->int: # last number\n",
+    "    \"returns sum of the three numbers\"\n",
+    "    return x + y + z\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add(10, 10, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_eq(add(10, 10, 10), 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
