--- a/index.ipynb
+++ b/index.ipynb
@@ -14,16 +14,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# nbprocess_demo\n",
     "\n",
-    "> Summary description here."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This file will become your README and also the index of your documentation."
+    "> dummy description here"
    ]
   },
   {
@@ -37,7 +30,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install your_project_name`"
+    "```\n",
+    "pip install nbprocess_demo\n",
+    "```"
    ]
   },
   {
@@ -84,7 +79,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
