add new test fn

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -89,7 +89,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#|export\n",
+    "def add2(x: int, # number 1 \n",
+    "        y: int, # number 1\n",
+    "        z: int, # number 2\n",
+    "       )->int: # last number\n",
+    "    \"returns sum of the three numbers\"\n",
+    "    return x + y + z\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
